Added Project Panama demo implementation